--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<script>
 		// 建構子 ScoreOutputer 接受一個字串，該字串為 csv 的檔案名稱
 		// 以下面範例，檔名就為 "109598105(總分: 6).csv"
-		var so = new ScoreOutputer("109598105");
+		var so = new ScoreOutputer("107590057");
 		so.installCSS(function () {
 			// 安裝 bootstrap 的 css，如果在 html 上方引用 bootstrap 5.1.1 的話就不用使用 installCSS ，注意一定要 bootstrap css 5.1.1 版
 			// installCSS 接收一個 callback 當作參數，作為成功安裝 bootstrap css 的回呼函式
@@ -38,8 +38,8 @@
 			//有幾個項目就呼叫幾個 addChild
 			//addChild 要比 renderModal 先呼叫
 			so.addChild("繪製出 5 個畫面", 1, true);
-			so.addChild("回答問題", 1, false);
-			so.addChild("可按鍵選擇上 / 下一隻角色", 1, false);
+			so.addChild("回答問題", 1, true);
+			so.addChild("可按鍵選擇上 / 下一隻角色", 1, true);
 			so.addChild("讀取作業 2 儲存的座標點在眼睛上繪製出分割線", 1, false);
 			so.addChild("可選擇當下控制哪個虹膜", 1, false);
 			so.addChild("按滑鼠左鍵控制虹膜移動，右鍵停止", 2, false);
@@ -90,6 +90,22 @@
 		let aspect = SCREEN_WIDTH / SCREEN_HEIGHT;
 		let frustumSize = 30;
 		let camera, camera2, camera3, camera4, camera5;
+		let currentModelFile = "models/mmd/kizunaai/kizunaai.pmx";
+		const modelFile = 'models/mmd/kizunaai/kizunaai.pmx';
+		const modelFiles = ["models/mmd/kizunaai/kizunaai.pmx",	"models/mmd/『天宮こころ(Kokoro Amamiya)』/『天宮こころ(Kokoro Amamiya)』.pmx", "models/mmd/るいのれ式物述有栖_配布用フォルダ/物述有栖.pmx", ];
+
+		const loader = new MMDLoader();
+
+		function onProgress(xhr) {
+
+			if (xhr.lengthComputable) {
+
+				const percentComplete = xhr.loaded / xhr.total * 100;
+				console.log(Math.round(percentComplete, 2) + '% downloaded');
+
+			}
+
+		}
 
 		Ammo().then(function (AmmoLib) {
 
@@ -146,7 +162,9 @@
 
 			}
 
+			let currentModelFile = "models/mmd/kizunaai/kizunaai.pmx";
 			const modelFile = 'models/mmd/kizunaai/kizunaai.pmx';
+			const modelFiles = ["models/mmd/kizunaai/kizunaai.pmx",	"models/mmd/『天宮こころ(Kokoro Amamiya)』/『天宮こころ(Kokoro Amamiya)』.pmx", "models/mmd/るいのれ式物述有栖_配布用フォルダ/物述有栖.pmx", ];
 
 			helper = new MMDAnimationHelper();
 
@@ -164,6 +182,8 @@
 			//
 
 			window.addEventListener('resize', onWindowResize);
+			document.addEventListener("keydown", onDocumentKeyDown, false);
+        	document.addEventListener("mousemove", onDocumentMouseMove, false);
 			//鏡頭控制
 
 		}
@@ -208,6 +228,94 @@
 		}
 
 		//
+		function onDocumentMouseMove(event) {
+			event.preventDefault();
+			mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
+			mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
+
+			raycaster.setFromCamera(mouse, camera);
+
+			const intersects = raycaster.intersectObjects([canvas]);
+
+			if (intersects.length > 0 && intersects[0]) {
+			mouse = intersects[0].point;
+			}
+		}
+
+		function onDocumentKeyDown(event) {
+			let keycode = event.which;
+
+			switch (keycode) {
+			case 49:
+				checkObjectExist("line1");
+				break;
+			case 50:
+				checkObjectExist("line2", "vertical", 0x00ff00);
+				break;
+			case 51:
+				checkObjectExist("line3");
+				break;
+			case 52:
+				checkObjectExist("line4", "vertical", 0x00ff00);
+				break;
+			case 81:
+				copyObject();
+				break;
+			case 83:
+				saveJSON();
+				break;
+			case 65:
+				previousModel();
+				break;
+			case 68:
+				nextModel();
+				break;
+			default:
+				break;
+			}
+		}
+
+		
+		function loadModel(modelPath) {
+			loader.load(modelPath, function (object) {
+
+			mesh = object;
+			mesh.position.y = - 10;
+
+			scene.add(mesh);
+
+			}, onProgress, null);
+			/*loader.load(
+			modelPath,
+			function (object) {
+				mesh = object;
+				mesh.position.set(0, -10, 0);
+				scene.add(mesh);
+			},
+			onProgress,
+			null
+			);*/
+		}
+
+		function nextModel() {
+			scene.remove(mesh);
+			const modelIndex = modelFiles.indexOf(currentModelFile);
+
+			const nextModelPath = modelIndex === (modelFiles.length - 1) ? modelFile : modelFiles[modelIndex + 1];
+			currentModelFile = nextModelPath;
+			
+			loadModel(nextModelPath);
+		}
+
+		function previousModel() {
+			scene.remove(mesh);
+			const modelIndex = modelFiles.indexOf(currentModelFile);
+
+			const previousModelPath = modelIndex === 0 ? modelFiles[modelFiles.length - 1] : modelFiles[modelIndex - 1];
+			currentModelFile = previousModelPath;
+			
+			loadModel(previousModelPath);
+		}
 
 		function animate() {
 
